Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/Master_Questions__c.object-meta.xml
<CustomObject>
    <description>It is used to capture questions value, data type of questions</description>
    <label>Master Questions</label>
    <nameField>
        <label>Master Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>