Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify question is mandatory or not</description>
    <inlineHelpText>If this checkbox is checked then this question will be mandatory on NPS feedback page else won&apos;t.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>