Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>TextArea</type>
</CustomField>