Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <description>Used to store name of question</description>
    <inlineHelpText>It will display question on the NPS feedback page.</inlineHelpText>
    <label>Question Name</label>
    <type>TextArea</type>
</CustomField>