Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <description>It is used to get questions according to sequence in soql query.</description>
    <inlineHelpText>Questions will display on NPS feedback page according to Question Order value.</inlineHelpText>
    <label>Question Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>