Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Identify question is activate or not</description>
    <inlineHelpText>If status is checked then this question will appear on feedback page else it won&apos;t.</inlineHelpText>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>