Partial_14Dec2021/force-app/main/default/objects/Master_Questions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to define data type for question in lightning component.</description>
    <inlineHelpText>If Type is pick-list then enter comma separated value in Options field.
If Type is Text/Text-Area/Number then enter &apos;null&apos; as a value in Options field.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>TextArea</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Multiselect</fullName>
                <isActive>false</isActive>
                <label>Multiselect</label>
            </value>
            <value>
                <fullName>Radio</fullName>
                <isActive>false</isActive>
                <label>Radio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>